dist_bin_SCRIPTS = \
	hnco-autocorrelation-run.pl \
	hnco-autocorrelation-stat.pl \
	hnco-benchmark-run.pl \
	hnco-benchmark-skeleton.pl \
	hnco-benchmark-stat.pl \
	hnco-dynamics-run.pl \
	hnco-dynamics-skeleton.pl \
	hnco-dynamics-stat.pl \
	hnco-ecdf-stat.pl \
	hnco-lookup-ratio-stat.pl \
	hnco-maximum-stat.pl \
	hnco-parameter-run.pl \
	hnco-parameter-skeleton.pl \
	hnco-parameter-stat.pl \
	hnco-runtime-stat.pl \
	hnco-walsh-doc.pl \
	hnco-walsh-run.pl \
	hnco-walsh-skeleton.pl

dist_noinst_SCRIPTS = optgen.pl
