# Copyright (C) 2016, 2017, 2018, 2019 Arnaud Berny

# This file is part of HNCO.

# HNCO is free software: you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# HNCO is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with HNCO. If not, see
# <http://www.gnu.org/licenses/>.

dist_bin_SCRIPTS = \
	hnco-autocorrelation-run.pl \
	hnco-autocorrelation-stat.pl \
	hnco-benchmark-run.pl \
	hnco-benchmark-skeleton.pl \
	hnco-benchmark-stat.pl \
	hnco-dynamics-run.pl \
	hnco-dynamics-skeleton.pl \
	hnco-dynamics-stat.pl \
	hnco-ecdf-stat.pl \
	hnco-lookup-ratio-stat.pl \
	hnco-maximum-stat.pl \
	hnco-parameter-run.pl \
	hnco-parameter-skeleton.pl \
	hnco-parameter-stat.pl \
	hnco-runtime-stat.pl \
	hnco-runtime2-skeleton.pl \
	hnco-walsh-run.pl \
	hnco-walsh-skeleton.pl \
	hnco-walsh-stat.pl

dist_noinst_SCRIPTS = optgen.pl
